2001-08-11  Lars Clausen  <Lars R. Clausen <lrclause@cs.uiuc.edu>>

	* objects/standard/polygon.c: 
	* objects/standard/create.h:
	* lib/polyshape.c:
	* lib/polyshape.h:
	* plug-ins/xfig/xfig-import.c:
	Use of user_data for polygon as well, including adding
	polyshape_set_points.  Include file for non-interactive 
	creation of standard objects, objects/standard/create.h

2001-08-10  Lars Clausen  <Lars R. Clausen <lrclause@cs.uiuc.edu>>

	* app/render_gdk.c: 
	* app/render_gdk.h: 
	* lib/font.c:
	* lib/font.h:
	* lib/widgets.c:
	More preliminary freetype support.  Not at all functional, crashes
	when rendering.

	* lib/poly_conn.h: 
	* lib/poly_conn.c: 
	* objects/standard/polyline.c: 
	Support for creating polyline objects with more than two points.
	This includes an extra function and a prototype change in the
	poly_conn lib object.

	* lib/object.c (object_copy): Fixed memory leak of handles and
	connections.

2001-08-08  Abel Cheung  <maddog@linux.org.hk>

	* dia.desktop: added traditional Chinese strings

2001-08-04  Cyrille Chepelov  <chepelov@calixo.net>

	* NEWS: updated to reflect build-time dependencies.

	* lib/properties.[ch]: wrote get_prop_descriptions() as a wrapper
	around obj->ops->describe_props(obj). Quarks are none of an
	object's business in the general case... 
	* lib/text.c: Added an apply_textattr_properties() function to
	factor out some common code related to applying a dialog's text
	attribute properties to a (Text *) which wasn't edited there. 
	Ditto for textstr, for the string part of an objet.

	* objects/GRAFCET/action.c:
	* objects/SADT/annotation.c:
	* objects/SADT/box.c: used apply_textattr_properties().
	
	* objects/UML/actor.c: 
	* objects/UML/branch.c:
	* objects/UML/component.c:
	* objects/UML/constraint.c:
	* objects/UML/small_package.c:
	* objects/UML/state.c:
	* objects/UML/usecase.c:
	* objects/UML/large_package.c:
	* objects/UML/note.c:
	* objects/UML/node.c:
	* objects/UML/message.c:
	* objects/UML/classicon.c: